<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectNepaliKeyboard"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/enableKeyboardText"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/successKeyboardText"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="monospace"
        android:textSize="25sp"
        android:id="@+id/successKeyboardText"
        android:visibility="gone"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK"
        android:id="@+id/enableKeyboardButton"
        android:background="@drawable/select_keyboard_button"
        android:layout_below="@+id/enableKeyboardText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/checkNepaliByTyping"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:textColorHint="#000"
        android:fontFamily="monospace"
        android:textSize="20sp"
        android:id="@+id/editTextForTyping"
        />

</RelativeLayout>